chore: change font-weight of pharap

--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
                   </div>
                 </form>
               </div>
-            </div><a class="c-presentations__button" href="#!">regresar</a>
+            </div><a class="c-presentations__button" href="#!">REGRESAR</a>
           </div>
         </div>
       </div>
