--- a/gallery-2.html
+++ b/gallery-2.html
@@ -44,7 +44,7 @@
                 <div class="item"><img src="dist/img/gallery-3-5.png" alt=""/></div>
                 <div class="item"><img src="dist/img/gallery-3-6.png" alt=""/></div>
               </div>
-            </div><a class="c-presentations__button" href="index.html">regresar</a>
+            </div><a class="c-presentations__button" href="index.html">REGRESAR</a>
           </div>
         </div>
       </div>
