--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="c-navbar__logo" href="index.html"><img src="dist/img/logo.svg" alt=""/></a>
       <div class="container">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
+          <ul class="navbar-nav mr-auto c-navbar__icons">
             <li class="nav-item"><a class="nav-link" href="#!"><i class="icon-facebook"></i></a></li>
             <li class="nav-item"><a class="nav-link" href="#!"><i class="icon-instagram"></i></a></li>
             <li class="nav-item"><a class="nav-link" href="#!"><i class="icon-whatsapp"></i></a></li>
@@ -31,7 +31,7 @@
           <div class="c-main__slide"><img src="dist/img/banner_principal.png" alt=""/>
             <div class="container">
               <div class="row wow fadeInDown">
-                <div class="col-12 col-md-6 offset-md-6">
+                <div class="col-12 col-md-6 offset-md-4">
                   <h3>“EL CAFÉ QUE<br><b>UNE</b> A LAS<br>PERSONAS”</h3>
                 </div>
               </div>
