--- a/our-coffee-1.html
+++ b/our-coffee-1.html
@@ -42,7 +42,7 @@
               <p>Café KERE'Ma Especial</p></a></div>
           <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-coffee-2.html"><img src="dist/img/coffee-3.png" alt=""/>
               <p>Café KERE'Ma Natural</p></a></div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-coffee-3.html"><img src="dist/img/coffee-3.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-coffee-3.html"><img src="dist/img/coffee-4.png" alt=""/>
               <p>Café KERE'Ma Honey</p></a></div>
         </div>
       </div>
@@ -60,15 +60,15 @@
                   <li><b>Altitud:</b> 1400 a 1800 m.s.n.m.</li>
                   <li><b>Variedad:</b> Caturra, Geisha, Catimor y Catuai.</li>
                 </ul>
-                <div class="c-presentations__main__price">
+                <div class="c-presentations__main__price" style="color:#FFDC00;">
                   <h4>Presentaciones:</h4>
-                  <div class="c-presentations__main__price-item"><span>250gr.</span><span>s/.22</span></div>
-                  <div class="c-presentations__main__price-item"><span>1kg.</span><span>s/.--</span></div>
+                  <div class="c-presentations__main__price-item"><span>250gr.</span><span>S/.22</span></div>
+                  <div class="c-presentations__main__price-item"><span>1kg.</span><span>S/.55</span></div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-12"><a class="c-presentations__button" href="index.html">regresar</a></div>
+          <div class="col-12"><a class="c-presentations__button" href="index.html">REGRESAR</a></div>
         </div>
       </div>
     </section>
