--- a/our-method-2.html
+++ b/our-method-2.html
@@ -27,7 +27,7 @@
     </nav>
     <main class="c-banner-products"><img src="dist/img/banner-metodo.png" alt=""/>
       <div class="c-banner-products__title wow fadeInDown">
-        <h1>nuestros<br>metodos</h1>
+        <h1>nuestros<br>métodos</h1>
       </div>
     </main>
     <section class="c-presentations">
@@ -54,15 +54,15 @@
             <div class="c-presentations__main"><img class="wow fadeInLeft" src="dist/img/metodo-complete-3.png" alt=""/>
               <div class="c-presentations__main__description wow fadeInRight"><img src="dist/img/metodo-complete-3-title.png" alt=""/>
                 <p>Este tipo de preparación es para un café americano. Al café que se obtenga le deberá añadir a su taza un poco de agua hervida. Este método le permitirá disfrutar de todo un proceso: desde que vierte agua caliente al café y se emite la fragancia.</p>
-                <div class="c-presentations__main__price">
+                <div class="c-presentations__main__price" style="color:#81604C;">
                   <h4>Presentaciones:</h4>
-                  <div class="c-presentations__main__price-item"><span>7 tazas<br>(1 cuerpo)</span><span>s/.50</span></div>
-                  <div class="c-presentations__main__price-item"><span>7 tazas<br>(2 cuerpo)</span><span>s/.55</span></div>
+                  <div class="c-presentations__main__price-item"><span>7 tazas<br>(1 cuerpo)</span><span>S/.50</span></div>
+                  <div class="c-presentations__main__price-item"><span>7 tazas<br>(2 cuerpo)</span><span>S/.55</span></div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-12"><a class="c-presentations__button" href="index.html">regresar</a></div>
+          <div class="col-12"><a class="c-presentations__button" href="index.html">REGRESAR</a></div>
         </div>
       </div>
     </section>
