--- a/our-method-3.html
+++ b/our-method-3.html
@@ -27,7 +27,7 @@
     </nav>
     <main class="c-banner-products"><img src="dist/img/banner-metodo.png" alt=""/>
       <div class="c-banner-products__title wow fadeInDown">
-        <h1>nuestros<br>metodos</h1>
+        <h1>nuestros<br>métodos</h1>
       </div>
     </main>
     <section class="c-presentations">
@@ -54,16 +54,16 @@
             <div class="c-presentations__main"><img class="wow fadeInLeft" src="dist/img/metodo-complete-4.png" alt=""/>
               <div class="c-presentations__main__description wow fadeInRight"><img src="dist/img/metodo-complete-4-title.png" alt=""/>
                 <p>La prensa francesa tiene una forma exterior muy similar a la de un pistón o émbolo que se desliza sobre una superficie cilíndrica de vidrio o plástico, suele tener un asa para que pueda verterse el contenido de su interior a una taza cuando se considere listo.</p>
-                <div class="c-presentations__main__price">
+                <div class="c-presentations__main__price" style="color:#81604C;">
                   <h4>Presentaciones:</h4>
-                  <div class="c-presentations__main__price-item small"><span>300ml</span><span>s/.28</span></div>
-                  <div class="c-presentations__main__price-item small"><span>600ml</span><span>s/.35</span></div>
-                  <div class="c-presentations__main__price-item small"><span>800ml</span><span>s/.45</span></div>
+                  <div class="c-presentations__main__price-item small"><span>300ml</span><span>S/.28</span></div>
+                  <div class="c-presentations__main__price-item small"><span>600ml</span><span>S/.35</span></div>
+                  <div class="c-presentations__main__price-item small"><span>800ml</span><span>S/.45</span></div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-12"><a class="c-presentations__button" href="index.html">regresar</a></div>
+          <div class="col-12"><a class="c-presentations__button" href="index.html">REGRESAR</a></div>
         </div>
       </div>
     </section>
