--- a/our-chocolate.html
+++ b/our-chocolate.html
@@ -49,19 +49,19 @@
           <div class="col-12">
             <div class="c-presentations__main"><img class="wow fadeInLeft" src="dist/img/chocolate-complete-1.png" alt=""/>
               <div class="c-presentations__main__description wow fadeInRight"><img src="dist/img/chocolate-complete-1-title.png" alt=""/>
-                <p>Es el resultado de tostar, moler y refinar al grano de cacao hasta obtener la pasta de cacao, sin preservantes. ideal para preparar chocolate de taza.</p>
+                <p>Es el resultado de tostar, moler y refinar al grano de cacao hasta obtener la pasta de cacao, sin preservantes. Ideal para preparar chocolate de taza.</p>
                 <ul>
                   <li><b>Origen:</b> Finca La Torre - Villa Rica</li>
                   <li><b>Proceso:</b> Lavado</li>
                   <li><b>Altitud:</b> 400 - 450msnm</li>
-                  <li><b>Variedad:</b> Criollo y CCN51 100% orgánico y artesanal</li>
+                  <li><b>Variedad:</b> Criollo y CCN51-100% orgánico y artesanal</li>
                 </ul>
-                <div class="c-presentations__main__price">
+                <div class="c-presentations__main__price" style="color:#803000;">
                   <h4>Presentaciones:</h4>
-                  <div class="c-presentations__main__price-item"><span>190gr.</span><span>s/.13</span></div>
+                  <div class="c-presentations__main__price-item"><span>190gr.</span><span>S/.13</span></div>
                 </div>
               </div>
-            </div><a class="c-presentations__button" href="index.html">regresar</a>
+            </div><a class="c-presentations__button" href="index.html">REGRESAR</a>
           </div>
         </div>
       </div>
