--- a/our-method-1.html
+++ b/our-method-1.html
@@ -27,7 +27,7 @@
     </nav>
     <main class="c-banner-products"><img src="dist/img/banner-metodo.png" alt=""/>
       <div class="c-banner-products__title wow fadeInDown">
-        <h1>nuestros<br>metodos</h1>
+        <h1>nuestros<br>métodos</h1>
       </div>
     </main>
     <section class="c-presentations">
@@ -54,14 +54,14 @@
             <div class="c-presentations__main"><img class="wow fadeInLeft" src="dist/img/metodo-complete-2.png" alt=""/>
               <div class="c-presentations__main__description wow fadeInRight"><img src="dist/img/metodo-complete-2-title.png" alt=""/>
                 <p>La cafetera V60 (Espresso Manera), se trata de un sistema de filtrado que dará lugar a una taza muy suave y aromática.</p>
-                <div class="c-presentations__main__price">
+                <div class="c-presentations__main__price" style="color:#81604C;">
                   <h4>Presentaciones:</h4>
-                  <div class="c-presentations__main__price-item"><span>4 tazas</span><span>s/.40</span></div>
+                  <div class="c-presentations__main__price-item"><span>4 tazas</span><span>S/.40</span></div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-12"><a class="c-presentations__button" href="index.html">regresar</a></div>
+          <div class="col-12"><a class="c-presentations__button" href="index.html">REGRESAR</a></div>
         </div>
       </div>
     </section>
