--- a/our-method.html
+++ b/our-method.html
@@ -27,7 +27,7 @@
     </nav>
     <main class="c-banner-products"><img src="dist/img/banner-metodo.png" alt=""/>
       <div class="c-banner-products__title wow fadeInDown">
-        <h1>nuestros<br>metodos</h1>
+        <h1>nuestros<br>métodos</h1>
       </div>
     </main>
     <section class="c-presentations">
@@ -37,13 +37,13 @@
             <h2>presentaciones</h2>
           </div>
           <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method.html"><img src="dist/img/metodo-1.png" alt=""/>
-              <p>Café KERE'Ma Premium</p></a></div>
+              <p>Caf. Italiana Kere’ma</p></a></div>
           <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method-1.html"><img src="dist/img/metodo-2.png" alt=""/>
-              <p>Café KERE'Ma Especial</p></a></div>
+              <p>Caf. V60 Kere’ma</p></a></div>
           <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method-2.html"><img src="dist/img/metodo-3.png" alt=""/>
-              <p>Café KERE'Ma Natural</p></a></div>
+              <p>Caf. Gota a Gota Kere’ma</p></a></div>
           <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method-3.html"><img src="dist/img/metodo-3.png" alt=""/>
-              <p>Café KERE'Ma Honey</p></a></div>
+              <p>Caf. Francesa Kere’ma</p></a></div>
         </div>
       </div>
     </section>
@@ -54,14 +54,14 @@
             <div class="c-presentations__main"><img class="wow fadeInLeft" src="dist/img/metodo-complete-1.png" alt=""/>
               <div class="c-presentations__main__description wow fadeInRight"><img src="dist/img/metodo-complete-1-title.png" alt=""/>
                 <p>La cafetera italiana o cafetera moka, es una cafetera que, de manera similar a la cafetera expreso, elabora el café haciendo pasar agua hervida presurizada por vapor, a través de café molido.</p>
-                <div class="c-presentations__main__price">
+                <div class="c-presentations__main__price" style="color:#81604C;">
                   <h4>Presentaciones:</h4>
-                  <div class="c-presentations__main__price-item"><span>6 tazas</span><span>s/.35</span></div>
+                  <div class="c-presentations__main__price-item"><span>6 tazas</span><span>S/.35</span></div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-12"><a class="c-presentations__button" href="index.html">regresar</a></div>
+          <div class="col-12"><a class="c-presentations__button" href="index.html">REGRESAR</a></div>
         </div>
       </div>
     </section>
