--- a/our-work.html
+++ b/our-work.html
@@ -38,7 +38,7 @@
               <div class="c-presentations__main__description wow fadeInRight"><img src="dist/img/work-complete-1-title.png" alt=""/>
                 <p>Te invitamos a recorrer nuestra finca, aprender sobre el proceso productivo del café, que inicia en la semilla, viveros, plantaciones; hasta el resultado final, una buena taza de café recién pasado.</p>
               </div>
-            </div><a class="c-presentations__button" href="index.html">regresar</a>
+            </div><a class="c-presentations__button" href="index.html">REGRESAR</a>
           </div>
         </div>
       </div>
