agree new images

--- a/index.html
+++ b/index.html
@@ -127,16 +127,51 @@
             <h2>opiniones</h2>
             <div class="c-slider-testimonial slider">
               <div>
-                <div class="c-section-testimonials__slide wow fadeInDown"><img src="dist/img/testimonial.png" alt=""/><span>Gerita Vásquez</span>
+                <div class="c-section-testimonials__slide wow fadeInDown"><img src="dist/img/testimonial-2.png" alt=""/><span>Huallpatuero Liz</span>
                   <div class="c-section-testimonials__description">
                     <p>“Me encantó conocer desde el sembrado de sus cafés, así como también el hecho que sea ecoamigable es muy importante, su sabor es realmente indescriptible. buenísimo!!”</p><img src="dist/img/testimonial_icon.png" alt=""/>
                   </div>
                 </div>
               </div>
               <div>
+                <div class="c-section-testimonials__slide wow fadeInDown"><img src="dist/img/testimonial-6.png" alt=""/><span>Aleja Bcc</span>
+                  <div class="c-section-testimonials__description">
+                    <p>“Café riquisimos! ... y un super paseo en su finca(ruta a la laguna Oconal conociendo su producción y con una vista espectacular del paisaje cafetero).”</p><img src="dist/img/testimonial_icon.png" alt=""/>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <div class="c-section-testimonials__slide wow fadeInDown"><img src="dist/img/testimonial-3.png" alt=""/><span>Fernando Maquera</span>
+                  <div class="c-section-testimonials__description">
+                    <p>“Sinceramente un excelente café, gracias por el recorrido donde nos explicaron la elaboración del café, la verdad sobre el café instantáneo y la degustación de su café delicioso muchas gracias.”</p><img src="dist/img/testimonial_icon.png" alt=""/>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <div class="c-section-testimonials__slide wow fadeInDown"><img src="dist/img/testimonial-4.png" alt=""/><span>Juliana Rafael Mendoza</span>
+                  <div class="c-section-testimonials__description">
+                    <p>“Excelente café, que no solo lo hace rico sus granos de alta calidad sino la hospitalidad de su familia, me quedo fascinado con su historia, tradición, calidez de familia y su buen café... Regresaremos para que Francisco nos guie.”</p><img src="dist/img/testimonial_icon.png" alt=""/>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <div class="c-section-testimonials__slide wow fadeInDown"><img src="dist/img/testimonial-5.png" alt=""/><span>Mayra Stephanie Díaz Núñez</span>
+                  <div class="c-section-testimonials__description">
+                    <p>“Linda experiencia, el major Café!!... Edgar y su esposa fueron muy amables en explicarnos todo el proceso del café y las diferentes técnicas... gracias por todo. Se los recomiendo.”</p><img src="dist/img/testimonial_icon.png" alt=""/>
+                  </div>
+                </div>
+              </div>
+              <div>
                 <div class="c-section-testimonials__slide wow fadeInDown"><img src="dist/img/testimonial.png" alt=""/><span>Gerita Vásquez</span>
                   <div class="c-section-testimonials__description">
-                    <p>“Me encantó conocer desde el sembrado de sus cafés, así como también el hecho que sea ecoamigable es muy importante, su sabor es realmente indescriptible. buenísimo!!”</p><img src="dist/img/testimonial_icon.png" alt=""/>
+                    <p>“Un lugar muy mágico y su gente es muy amable.”</p><img src="dist/img/testimonial_icon.png" alt=""/>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <div class="c-section-testimonials__slide wow fadeInDown"><img src="dist/img/testimonial-1.png" alt=""/><span>Renee Coba</span>
+                  <div class="c-section-testimonials__description">
+                    <p>“Excelente y sabor muy agradable.”</p><img src="dist/img/testimonial_icon.png" alt=""/>
                   </div>
                 </div>
               </div>
