agree styles and slider

--- a/index.html
+++ b/index.html
@@ -50,28 +50,32 @@
       <div class="container">
         <div class="c-slider-principal slider">
           <div>
-            <div class="c-section-products__slide"><img class="wow fadeInLeft" src="dist/img/coffee_work.png" alt=""/>
+            <div class="c-section-products__slide">
+              <div class="c-section-products__slide__image"><img class="wow fadeInLeft" src="dist/img/coffee_work.png" alt=""/><img class="wow fadeInLeft" src="dist/img/coffee_work-background.png" alt=""/></div>
               <div class="c-section-products__slide__description wow fadeInRight"><span>PRODUCTOS</span>
                 <h4>Nuestros<br>trabajo</h4><a href="our-work.html">Ver más</a>
               </div>
             </div>
           </div>
           <div>
-            <div class="c-section-products__slide"><img class="wow fadeInLeft" src="dist/img/coffee_methods.png" alt=""/>
+            <div class="c-section-products__slide">
+              <div class="c-section-products__slide__image"><img class="wow fadeInLeft" src="dist/img/coffee_methods.png" alt=""/><img class="wow fadeInLeft" src="dist/img/coffee_methods-background.png" alt=""/></div>
               <div class="c-section-products__slide__description wow fadeInRight"><span>PRODUCTOS</span>
                 <h4>Nuestros<br>métodos</h4><a href="our-method.html">Ver más</a>
               </div>
             </div>
           </div>
           <div>
-            <div class="c-section-products__slide"><img class="wow fadeInLeft" src="dist/img/coffee_chocolate.png" alt=""/>
+            <div class="c-section-products__slide">
+              <div class="c-section-products__slide__image"><img class="wow fadeInLeft" src="dist/img/coffee_chocolate.png" alt=""/><img class="wow fadeInLeft" src="dist/img/coffee_chocolate-background.png" alt=""/></div>
               <div class="c-section-products__slide__description wow fadeInRight"><span>PRODUCTOS</span>
                 <h4>Nuestros<br>chocolates</h4><a href="our-chocolate.html">Ver más</a>
               </div>
             </div>
           </div>
           <div>
-            <div class="c-section-products__slide"><img class="wow fadeInLeft" src="dist/img/coffee_coffe.png" alt=""/>
+            <div class="c-section-products__slide">
+              <div class="c-section-products__slide__image"><img class="wow fadeInLeft" src="dist/img/coffee_coffe.png" alt=""/><img class="wow fadeInLeft" src="dist/img/coffee_coffee-background.png" alt=""/></div>
               <div class="c-section-products__slide__description wow fadeInRight"><span>PRODUCTOS</span>
                 <h4>Nuestros<br>cafés</h4><a href="our-coffee.html">Ver más</a>
               </div>
@@ -94,21 +98,24 @@
       <div class="container">
         <div class="c-slider-gallery slider">
           <div>
-            <div class="c-section-products__slide"><img class="wow fadeInLeft" src="dist/img/logo_coffee.png" alt=""/>
+            <div class="c-section-products__slide">
+              <div class="c-section-products__slide__image"><img class="wow fadeInLeft" src="dist/img/logo_coffee.png" alt=""/><img class="wow fadeInLeft" src="dist/img/logo_coffee-background.png" alt=""/></div>
               <div class="c-section-products__slide__description wow fadeInRight"><span>GALERIA</span>
                 <h4>Consumi<br>dores</h4><a href="gallery-2.html">Ver más</a>
               </div>
             </div>
           </div>
           <div>
-            <div class="c-section-products__slide"><img class="wow fadeInLeft" src="dist/img/logo_progress.png" alt=""/>
+            <div class="c-section-products__slide">
+              <div class="c-section-products__slide__image"><img class="wow fadeInLeft" src="dist/img/logo_progress.png" alt=""/><img class="wow fadeInLeft" src="dist/img/logo_progress-background.png" alt=""/></div>
               <div class="c-section-products__slide__description wow fadeInRight"><span>GALERIA</span>
                 <h4>proceso de<br>calidad</h4><a href="gallery-1.html">Ver más</a>
               </div>
             </div>
           </div>
           <div>
-            <div class="c-section-products__slide"><img class="wow fadeInLeft" src="dist/img/logo_plants.png" alt=""/>
+            <div class="c-section-products__slide">
+              <div class="c-section-products__slide__image"><img class="wow fadeInLeft" src="dist/img/logo_plants.png" alt=""/><img class="wow fadeInLeft" src="dist/img/logo_plants-background.png" alt=""/></div>
               <div class="c-section-products__slide__description wow fadeInRight"><span>GALERIA</span>
                 <h4>áreas de<br>producción<br>de café</h4><a href="gallery.html">Ver más</a>
               </div>
@@ -116,10 +123,8 @@
           </div>
         </div>
       </div>
-    </section>
-    <section class="c-section-map"><img src="dist/img/map-site.png" alt=""/>
-      <p>Carretera el Oconal - Villa Rica (0.2 km)</p>
-    </section>
+    </section><a class="c-section-map" href="https://www.google.com/maps/place/FINCA+LA+TORRE/@-10.7470277,-75.2760082,17z/data=!4m13!1m7!3m6!1s0x910996e730ed15c7:0x7fd22891b25a50cb!2sEl+Oconal,+Villa+Rica+19300!3b1!8m2!3d-10.746917!4d-75.277124!3m4!1s0x910996e8ff99825f:0x117e3ac71694cc24!8m2!3d-10.7463949!4d-75.2742259" target="_blank"><img src="dist/img/map.svg" alt=""/>
+      <p>Carretera el Oconal - Villa Rica (0.2 km)</p></a>
     <section class="c-section-testimonials"><img src="dist/img/testimonials-back.png" alt=""/>
       <div class="container">
         <div class="row">
