--- a/our-chocolate.html
+++ b/our-chocolate.html
@@ -47,7 +47,8 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <div class="c-presentations__main"><img class="wow fadeInLeft" src="dist/img/chocolate-complete-1.png" alt=""/>
+            <div class="c-presentations__main">
+              <div class="c-presentations__main-image"><img class="wow fadeInLeft" src="dist/img/chocolate-complete-1.png" alt=""/><img class="wow fadeInLeft" src="dist/img/chocolate-complete-background.png" alt=""/></div>
               <div class="c-presentations__main__description wow fadeInRight"><img src="dist/img/chocolate-complete-1-title.png" alt=""/>
                 <p>Es el resultado de tostar, moler y refinar al grano de cacao hasta obtener la pasta de cacao, sin preservantes. Ideal para preparar chocolate de taza.</p>
                 <ul>
@@ -57,8 +58,8 @@
                   <li><b>Variedad:</b> Criollo y CCN51-100% orgánico y artesanal</li>
                 </ul>
                 <div class="c-presentations__main__price" style="color:#803000;">
-                  <h4>Presentaciones:</h4>
-                  <div class="c-presentations__main__price-item"><span>190gr.</span><span>S/.13</span></div>
+                  <h4 style="color:#803000;">Presentaciones:</h4>
+                  <div class="c-presentations__main__price-item"><span style="color:#803000;">190gr.</span><span style="box-shadow:0 0 0 2px #803000;">S/.13</span></div>
                 </div>
               </div>
             </div><a class="c-presentations__button" href="index.html">REGRESAR</a>
