--- a/our-method-2.html
+++ b/our-method-2.html
@@ -42,7 +42,7 @@
               <p>Café KERE'Ma Especial</p></a></div>
           <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method-2.html"><img src="dist/img/metodo-3.png" alt=""/>
               <p>Café KERE'Ma Natural</p></a></div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method-3.html"><img src="dist/img/metodo-3.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method-3.html"><img src="dist/img/metodo-4.png" alt=""/>
               <p>Café KERE'Ma Honey</p></a></div>
         </div>
       </div>
@@ -51,7 +51,8 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <div class="c-presentations__main"><img class="wow fadeInLeft" src="dist/img/metodo-complete-3.png" alt=""/>
+            <div class="c-presentations__main">
+              <div class="c-presentations__main-image"><img class="wow fadeInLeft" src="dist/img/metodo-complete-3.png" alt=""/><img class="wow fadeInLeft" src="dist/img/metodo-complete-background.png" alt=""/></div>
               <div class="c-presentations__main__description wow fadeInRight"><img src="dist/img/metodo-complete-3-title.png" alt=""/>
                 <p>Este tipo de preparación es para un café americano. Al café que se obtenga le deberá añadir a su taza un poco de agua hervida. Este método le permitirá disfrutar de todo un proceso: desde que vierte agua caliente al café y se emite la fragancia.</p>
                 <div class="c-presentations__main__price" style="color:#81604C;">
