--- a/our-coffee-1.html
+++ b/our-coffee-1.html
@@ -51,7 +51,8 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <div class="c-presentations__main"><img class="wow fadeInLeft" src="dist/img/coffee-complete-2.png" alt=""/>
+            <div class="c-presentations__main">
+              <div class="c-presentations__main-image"><img class="wow fadeInLeft" src="dist/img/coffee-complete-2.png" alt=""/><img class="wow fadeInLeft" src="dist/img/coffee-complete-2-background.png" alt=""/></div>
               <div class="c-presentations__main__description wow fadeInRight"><img src="dist/img/coffee-complete-2-title.png" alt=""/>
                 <p>De proceso lavado. Perfil de tueste; de sabores a frutos rojos, notas a durazno y mandarina, cuerpo cremoso, acidez brillante, con notas dulces y cítricas.</p>
                 <ul>
