--- a/our-coffee-2.html
+++ b/our-coffee-2.html
@@ -51,7 +51,8 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <div class="c-presentations__main"><img class="wow fadeInLeft" src="dist/img/coffee-complete-3.png" alt=""/>
+            <div class="c-presentations__main">
+              <div class="c-presentations__main-image"><img class="wow fadeInLeft" src="dist/img/coffee-complete-3.png" alt=""/><img class="wow fadeInLeft" src="dist/img/coffee-complete-3-background.png" alt=""/></div>
               <div class="c-presentations__main__description wow fadeInRight"><img src="dist/img/coffee-complete-3-title.png" alt=""/>
                 <p>De proceso natural. Perfil de tueste; de cuerpo intenso, baja acidez, sabor exótico y notas a vino dulce y frutas.</p>
                 <ul>
