--- a/our-coffee-3.html
+++ b/our-coffee-3.html
@@ -51,7 +51,8 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <div class="c-presentations__main"><img class="wow fadeInLeft" src="dist/img/coffee-complete-4.png" alt=""/>
+            <div class="c-presentations__main">
+              <div class="c-presentations__main-image"><img class="wow fadeInLeft" src="dist/img/coffee-complete-4.png" alt=""/><img class="wow fadeInLeft" src="dist/img/coffee-complete-4-background.png" alt=""/></div>
               <div class="c-presentations__main__description wow fadeInRight"><img src="dist/img/coffee-complete-4-title.png" alt=""/>
                 <p>De proceso semi lavado. Perfil de tueste; de sabores únicos, caracterizado por un sabor diferente, con notas a caramelo y frutos rojos. Acidez dulce.</p>
                 <ul>
