--- a/our-coffee.html
+++ b/our-coffee.html
@@ -51,7 +51,8 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <div class="c-presentations__main"><img class="wow fadeInLeft" src="dist/img/coffee-complete-1.png" alt=""/>
+            <div class="c-presentations__main">
+              <div class="c-presentations__main-image"><img class="wow fadeInLeft" src="dist/img/coffee-complete-1.png" alt=""/><img class="wow fadeInLeft" src="dist/img/coffee-complete-1-background.png" alt=""/></div>
               <div class="c-presentations__main__description wow fadeInRight"><img src="dist/img/coffee-complete-1-title.png" alt=""/>
                 <p>Nuestro clásico, Perfil de tueste; de sabores a caramelo, pasta de cacao, chocolate y flores, cuerpo medio, acidez balanceada con notas cítricas.</p>
                 <ul>
