--- a/our-method.html
+++ b/our-method.html
@@ -42,7 +42,7 @@
               <p>Caf. V60 Kere’ma</p></a></div>
           <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method-2.html"><img src="dist/img/metodo-3.png" alt=""/>
               <p>Caf. Gota a Gota Kere’ma</p></a></div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method-3.html"><img src="dist/img/metodo-3.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method-3.html"><img src="dist/img/metodo-4.png" alt=""/>
               <p>Caf. Francesa Kere’ma</p></a></div>
         </div>
       </div>
@@ -51,7 +51,8 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <div class="c-presentations__main"><img class="wow fadeInLeft" src="dist/img/metodo-complete-1.png" alt=""/>
+            <div class="c-presentations__main">
+              <div class="c-presentations__main-image"><img class="wow fadeInLeft" src="dist/img/metodo-complete-1.png" alt=""/><img class="wow fadeInLeft" src="dist/img/metodo-complete-background.png" alt=""/></div>
               <div class="c-presentations__main__description wow fadeInRight"><img src="dist/img/metodo-complete-1-title.png" alt=""/>
                 <p>La cafetera italiana o cafetera moka, es una cafetera que, de manera similar a la cafetera expreso, elabora el café haciendo pasar agua hervida presurizada por vapor, a través de café molido.</p>
                 <div class="c-presentations__main__price" style="color:#81604C;">
