--- a/our-work.html
+++ b/our-work.html
@@ -34,7 +34,8 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <div class="c-presentations__main"><img class="wow fadeInLeft" src="dist/img/work-complete-1.png" alt=""/>
+            <div class="c-presentations__main">
+              <div class="c-presentations__main-image"><img class="wow fadeInLeft" src="dist/img/work-complete-1.png" alt=""/><span></span></div>
               <div class="c-presentations__main__description wow fadeInRight"><img src="dist/img/work-complete-1-title.png" alt=""/>
                 <p>Te invitamos a recorrer nuestra finca, aprender sobre el proceso productivo del café, que inicia en la semilla, viveros, plantaciones; hasta el resultado final, una buena taza de café recién pasado.</p>
               </div>
