fix colors in presentations

--- a/our-chocolate-1.html
+++ b/our-chocolate-1.html
@@ -36,9 +36,9 @@
           <div class="col-12">
             <h2>presentaciones</h2>
           </div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-chocolate.html"><img src="dist/img/chocolate-1.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item brown" href="our-chocolate.html"><img src="dist/img/chocolate-complete-1.png" alt=""/><i class="icon-plus"></i>
               <p>Pasta de Cacao KERE'Ma </p></a></div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-chocolate-1.html"><img src="dist/img/chocolate-2.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item brown" href="our-chocolate-1.html"><img src="dist/img/chocolate-complete-2.png" alt=""/><i class="icon-plus"></i>
               <p>Nibs de Cacao KERE'Ma </p></a></div>
         </div>
       </div>
