--- a/our-method-1.html
+++ b/our-method-1.html
@@ -36,14 +36,14 @@
           <div class="col-12">
             <h2>presentaciones</h2>
           </div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method.html"><img src="dist/img/metodo-1.png" alt=""/>
-              <p>Café KERE'Ma Premium</p></a></div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method-1.html"><img src="dist/img/metodo-2.png" alt=""/>
-              <p>Café KERE'Ma Especial</p></a></div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method-2.html"><img src="dist/img/metodo-3.png" alt=""/>
-              <p>Café KERE'Ma Natural</p></a></div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method-3.html"><img src="dist/img/metodo-4.png" alt=""/>
-              <p>Café KERE'Ma Honey</p></a></div>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item brown-2" href="our-method.html"><img src="dist/img/metodo-complete-1.png" alt=""/><i class="icon-plus"></i>
+              <p>Caf. Italiana Kere’ma</p></a></div>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item brown-2" href="our-method-1.html"><img src="dist/img/metodo-complete-2.png" alt=""/><i class="icon-plus"></i>
+              <p>Caf. V60 Kere’ma</p></a></div>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item brown-2" href="our-method-2.html"><img src="dist/img/metodo-complete-3.png" alt=""/><i class="icon-plus"></i>
+              <p>Caf. Gota a Gota Kere’ma</p></a></div>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item brown-2" href="our-method-3.html"><img src="dist/img/metodo-complete-4.png" alt=""/><i class="icon-plus"></i>
+              <p>Caf. Francesa Kere’ma</p></a></div>
         </div>
       </div>
     </section>
