--- a/our-coffee-3.html
+++ b/our-coffee-3.html
@@ -36,13 +36,13 @@
           <div class="col-12">
             <h2>presentaciones</h2>
           </div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-coffee.html"><img src="dist/img/coffee-1.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-coffee.html"><img src="dist/img/coffee-complete-1.png" alt=""/><i class="icon-plus"></i>
               <p>Café KERE'Ma Premium</p></a></div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-coffee-1.html"><img src="dist/img/coffee-2.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item yellow" href="our-coffee-1.html"><img src="dist/img/coffee-complete-2.png" alt=""/><i class="icon-plus"></i>
               <p>Café KERE'Ma Especial</p></a></div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-coffee-2.html"><img src="dist/img/coffee-3.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item green" href="our-coffee-2.html"><img src="dist/img/coffee-complete-3.png" alt=""/><i class="icon-plus"></i>
               <p>Café KERE'Ma Natural</p></a></div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-coffee-3.html"><img src="dist/img/coffee-4.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item orange" href="our-coffee-3.html"><img src="dist/img/coffee-complete-4.png" alt=""/><i class="icon-plus"></i>
               <p>Café KERE'Ma Honey</p></a></div>
         </div>
       </div>
