--- a/our-coffee.html
+++ b/our-coffee.html
@@ -36,13 +36,13 @@
           <div class="col-12">
             <h2>presentaciones</h2>
           </div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-coffee.html"><img src="dist/img/coffee-1.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-coffee.html"><img src="dist/img/coffee-complete-1.png" alt=""/><i class="icon-plus"></i>
               <p>Café KERE'Ma Premium</p></a></div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-coffee-1.html"><img src="dist/img/coffee-2.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item yellow" href="our-coffee-1.html"><img src="dist/img/coffee-complete-2.png" alt=""/><i class="icon-plus"></i>
               <p>Café KERE'Ma Especial</p></a></div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-coffee-2.html"><img src="dist/img/coffee-3.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item green" href="our-coffee-2.html"><img src="dist/img/coffee-complete-3.png" alt=""/><i class="icon-plus"></i>
               <p>Café KERE'Ma Natural</p></a></div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-coffee-3.html"><img src="dist/img/coffee-4.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item orange" href="our-coffee-3.html"><img src="dist/img/coffee-complete-4.png" alt=""/><i class="icon-plus"></i>
               <p>Café KERE'Ma Honey</p></a></div>
         </div>
       </div>
@@ -61,10 +61,10 @@
                   <li><b>Altitud:</b> 1400 a 1800 m.s.n.m.</li>
                   <li><b>Variedad:</b> Caturra, Geisha, Catimor y Catuai.</li>
                 </ul>
-                <div class="c-presentations__main__price">
-                  <h4>Presentaciones:</h4>
-                  <div class="c-presentations__main__price-item"><span>250gr.</span><span>S/.20</span></div>
-                  <div class="c-presentations__main__price-item"><span>1kg.</span><span>S/.50</span></div>
+                <div class="c-presentations__main__price" style="color: #FF6300;">
+                  <h4 style="color: #FF6300;">Presentaciones:</h4>
+                  <div class="c-presentations__main__price-item"><span style="color: #FF6300;">250gr.</span><span style="box-shadow:0 0 0 2px #FF6300;">S/.20</span></div>
+                  <div class="c-presentations__main__price-item"><span style="color: #FF6300;">1kg.</span><span style="box-shadow:0 0 0 2px #FF6300;">S/.50</span></div>
                 </div>
               </div>
             </div>
