--- a/our-method.html
+++ b/our-method.html
@@ -36,13 +36,13 @@
           <div class="col-12">
             <h2>presentaciones</h2>
           </div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method.html"><img src="dist/img/metodo-1.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item brown-2" href="our-method.html"><img src="dist/img/metodo-complete-1.png" alt=""/><i class="icon-plus"></i>
               <p>Caf. Italiana Kere’ma</p></a></div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method-1.html"><img src="dist/img/metodo-2.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item brown-2" href="our-method-1.html"><img src="dist/img/metodo-complete-2.png" alt=""/><i class="icon-plus"></i>
               <p>Caf. V60 Kere’ma</p></a></div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method-2.html"><img src="dist/img/metodo-3.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item brown-2" href="our-method-2.html"><img src="dist/img/metodo-complete-3.png" alt=""/><i class="icon-plus"></i>
               <p>Caf. Gota a Gota Kere’ma</p></a></div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method-3.html"><img src="dist/img/metodo-4.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item brown-2" href="our-method-3.html"><img src="dist/img/metodo-complete-4.png" alt=""/><i class="icon-plus"></i>
               <p>Caf. Francesa Kere’ma</p></a></div>
         </div>
       </div>
