--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Documents</title>
     <link rel="stylesheet" href="dist/css/app.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body>
     <nav class="c-navbar navbar navbar-expand-lg">
@@ -25,7 +26,7 @@
         </div>
       </div>
     </nav>
-    <main class="c-main wow fadeInDown">
+    <main class="c-main wow fadeInDown desktop">
       <div class="slider single-item">
         <div>
           <div class="c-main__slide"><img src="dist/img/banner_principal.png" alt=""/>
@@ -43,6 +44,27 @@
         </div>
         <div>
           <div class="c-main__slide"><img src="dist/img/banner_principal-2.png" alt=""/></div>
+        </div>
+      </div>
+    </main>
+    <main class="c-main wow fadeInDown movil">
+      <div class="slider single-item">
+        <div>
+          <div class="c-main__slide"><img src="dist/img/banner_principal-movil.png" alt=""/>
+            <div class="container">
+              <div class="row wow fadeInDown">
+                <div class="col-12 col-md-6 offset-md-4">
+                  <h3>“EL CAFÉ QUE<br><b>UNE</b> A LAS<br>PERSONAS”</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div>
+          <div class="c-main__slide"><img src="dist/img/banner_principa-1-movil.png" alt=""/></div>
+        </div>
+        <div>
+          <div class="c-main__slide"><img src="dist/img/banner_principal-2-movil.png" alt=""/></div>
         </div>
       </div>
     </main>
@@ -86,7 +108,7 @@
     </section>
     <section class="c-section-about"><img src="dist/img/nacimos-back.png" alt=""/>
       <div class="c-section-title wow fadeInDown"><img src="dist/img/title-nacimos.svg" alt=""/>
-        <p>...En una finca llena de hermosa vegetación y una cálida familia, que nos enseñó a trabajar la tierra y definió nuestra pasión en el café, un sentimiento que queremos transmitir a través de todas nuestras actividades.</p>
+        <p class="c-section-about__description">...En una finca llena de hermosa vegetación y una cálida familia, que nos enseñó a trabajar la tierra y definió nuestra pasión en el café, un sentimiento que queremos transmitir a través de todas nuestras actividades.</p>
       </div>
     </section>
     <section class="c-section-about c-section-about--black">
