--- a/our-coffee-3.html
+++ b/our-coffee-3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Documents</title>
     <link rel="stylesheet" href="dist/css/app.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body>
     <nav class="c-navbar navbar navbar-expand-lg">
